--- a/README
+++ b/README
@@ -1,7 +1,3 @@
-#WeatherApp
+In the words of Abraham Lincoln:
 
-App for weather forecast
-
-to start using it clone repository:
-
-git clone https://github.com/dimaP8889/WeatherTestApp.git
+> Pardon my French
